<resources>
    <string name="app_name">消息通知</string>
    <string name="service_name">消息监听服务</string>

    <string name="show_message_count">你有来自 %s 的 %d 条消息需要查看</string>
    <string name="filter_text">关键字 %s</string>
    <string name="close">关闭</string>

    <string name="input_app_name">请输入应用包名</string>
    <string name="input_title_filter">请输入消息头</string>
    <string name="input_message_filter">请输入消息内容</string>
    <string name="play_sleep_time">提示间隔时间</string>
    <string name="sleep_time">4000</string>
    <string name="apply_setting">应用配置</string>
    <string name="start_setting">打开设置</string>
    <string name="create_history_shortcut">创建历史记录快捷方式</string>
    <string name="battery_white_list">加入电池优化白名单</string>
    <string name="is_battery_white_list">已在电池优化白名单</string>
    <string name="click_add_to_battery_white_list">点击加入电池优化白名单</string>
    <string name="play_music">声音:</string>
    <string name="zheng_dong">震动:</string>
    <string name="contains_service">包括服务</string>
    <string name="pause_notify_time">关闭后是否暂停通知</string>
    <string name="pause_notify_time_hint">关闭后暂停通知的时间(单位:分钟)</string>
    <string name="net_log_url">请输入Notify Url</string>
    <string name="net_log_url_hint">url</string>
    <string name="account">请输入Title Key</string>
    <string name="account_hint">Title Key</string>
    <string name="filename_tip">请输入Message Key</string>
    <string name="filename">Message Key</string>
    <string name="pause_notify_page_text">暂停通知对所有页面生效</string>
    <string name="wait_service_connect">等待服务连接</string>
    <string name="click_close_notify">点击关闭通知</string>
    <string name="history_list">历史记录</string>
    <string name="history_null_tip">暂无历史记录</string>
</resources>
