<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="com.zhou.example.messagelisenterservice.SettingActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/input_app_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/input_app_name"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/input_title_filter"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_title_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/input_title_filter"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/input_message_filter"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_message_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/input_message_filter"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/play_sleep_time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/playSleepTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/sleep_time"
                android:textColor="#000"
                android:textSize="18sp" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/playMusicCheck"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="start"
                    android:text="@string/play_music"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/playMusicCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/zhendongCheck"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="start"
                    android:text="@string/zheng_dong"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/zhendongCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/containsService"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="start"
                    android:text="@string/contains_service"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/containsService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_setting"
            android:textColor="#000" />

        <Button
            android:id="@+id/startSettingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_setting"
            android:textColor="#000" />
    </LinearLayout>
</LinearLayout>
